# workflows

./: README.md
.github/workflows/: _check-pip-compile-sync.yml  _deploy.yml  _lint.yml  _styles.yml  _tests.yml  apply-ruff.yml  check-cargo.yml  check-ruff-only-changed.yml  check-ruff.yml  commit-changelog-and-release.yml  deploy-mkdocs.yml
actions/apply-pip-compile/: action.yml
actions/check-mkdocs/: action.yml
actions/check-pip-compile/: action.yml
actions/gen-init-py/: action.yml
actions/parse-changelog/: .editorconfig  .gitignore  README.md  action.yml  biome.jsonc  package.json  tsconfig.json  vite.config.ts
actions/parse-changelog/src/: index.ts
actions/run-doctest/: action.yml
actions/run-pytest/: action.yml
actions/setup-conda-and-uv/: action.yml
actions/setup-micromamba-and-uv/: action.yml
actions/setup-python-and-uv/: action.yml
docs/: CHANGELOG.md
python-projector/: .gitignore  LICENSE  README.md  pyproject.toml
python-projector/src/python_projector/: __init__.py  _version.py
python-projector/src/python_projector/cli/: api.py  main.py
python-projector/src/python_projector/scripts/: run_doctest.py
python-projector/src/python_projector/utils/: deferred_logger.py  files.py  tests.py  toml.py  version.py
scripts/: README.md  compile_requirements.sh  gen_init_py.py  get_min_python_version.py  run_doctest.py  set_next_version_in_deploy_yml.py
